--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ header a{
     border-radius: 12px;
     font-weight: bold;
 }
+header div{
+    padding: 15px;
+    border-radius: 12px;
+}
 header a:hover{
     background: white;
     color: black;
